@@ -5,6 +5,10 @@
 Version 2.0.3
 =============
 
+Changes:
+ - Models can now be read from standard input (using the "-" or
+   "--input-from-stdin" command line options). Thanks to Sebastian Kosch.
+
 Bug fixes:
  - Fix unification of aliased variables which could sometimes result in
    variables being removed although had a constraining right hand side.
